# vee

./: .gitignore  README.md  TESTS.md  install.sh
.github/workflows/: main.yml
vee/: Cargo.toml
vee/src/: linker.rs  lockfile.rs  main.rs  package_json.rs  registry.rs  resolver.rs  scripts.rs  ui.rs
vee/src/cache/: integrity.rs  mod.rs
vee/src/registry/: npm.rs  npmrc.rs
vee/src/resolver/: semver_npm.rs
